# dnb_kemrox_custom_robot

./: CHANGELOG.md  CMakeLists.txt  package.xml
launch/: custom_robot.launch  start.launch
meshes/: Readme.md
module_config/: module_generic.yaml
module_config/robot/: kemrox_custom.yaml
urdf/robots/: custom_robot.urdf
