<?xml version="1.0"?>
<package format="2">
  <name>dnb_kemrox_custom_robot</name>
  <version>0.0.1</version>
  <description>The dnb_kemrox_custom_robot package</description>

  <maintainer email="florian.eith@dragandbot.com">Florian Eith</maintainer>

  <license>Copyright drag and bot GmbH</license>
  <url>https://www.dragandbot.com/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>dnb_ros_driver_kemrox</exec_depend>

  <export>
  </export>
</package>